# MH.Tools.TtsAndSrtGenerate

./: .gitignore  CLAUDE.md  README.md  TtsSrtGenerator.spec  build_gui.py  main.py  pyproject.toml  requirements.txt  run_gui.py
config/: default.yaml
docs/: DOCUMENTATION_MAP.md  README.md  TRANSFORMATION_EXAMPLE.md  USER_MANUAL.md  ai-instruction.md  architecture.md  index.md
docs/api/: reference.md
docs/explanation/: ARCHITECTURE.md  AUDIO_PIPELINE.md  README.md  TESTING_STRATEGY.md  TTS_ENGINES.md  transaction-service-design.md
docs/guides/: code-explained.md  configuration.md  setup.md  user-guide.md
docs/how-to/: BATCH_PROCESSING.md  CONFIGURATION.md  CONTRIBUTING.md  CREATING_SCRIPTS.md  CUSTOM_VOICES.md  DOCKER_SETUP.md  GENERATE_API_DOCS.md  INSTALLATION.md  KAFKA_INTEGRATION.md  README.md  USING_THE_GUI.md  USING_THE_TUI.md  creative-transaction-partitioning.md  transaction-service-tasks.md
docs/plan/: implementation-plan.md  readme.md
docs/reference/: AI_JSON_INPUT.md  API_REFERENCE.md  CLI_REFERENCE.md  CONFIG_REFERENCE.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  SCRIPT_FORMAT.md  VOICE_REFERENCE.md
docs/superpowers/: handover-tts-console-ui-v1.md  handover-tts-console-ui-v2.md
docs/tutorials/: GETTING_STARTED.md  QUICK_START.md  QUICK_START_DOCKER.md  README.md  YOUR_FIRST_SCRIPT.md
examples/: sample_script.json
src/: __init__.py  pipeline.py
src/engines/: __init__.py  base.py  edge.py  factory.py  kokoro.py
tests/: __init__.py  test_srt.py  test_validator.py
topics/: conversation_1.json
voices/: .gitkeep
(+76 files in other folders)
